--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "parcel build src/index.pug --public-url /"
   },
   "dependencies": {
+    "browsernizr": "^2.2.0",
+    "debounce": "^1.1.0",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
     "parcel-plugin-pug": "^0.2.5"
