--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "debounce": "^1.1.0",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
-    "parcel-plugin-pug": "^0.2.5"
+    "parcel-plugin-pug": "^0.2.5",
+    "smoothscroll": "^0.4.0"
   },
   "browserslist": [
     "last 2 versions"
