--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "start": "parcel src/index.pug",
-    "build": "parcel build src/index.pug --public-url /"
+    "build": "rm -rf dist && parcel build src/index.pug --public-url / && inline-source --root ./dist dist/index.html dist/index.html"
   },
   "dependencies": {
     "browsernizr": "^2.2.0",
     "debounce": "^1.1.0",
+    "inline-source-cli": "^1.2.0",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
     "parcel-plugin-pug": "^0.2.5",
