--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.6.2",
     "parcel-plugin-pug": "^0.2.5",
-    "smoothscroll": "^0.4.0"
+    "smoothscroll": "^0.4.0",
+    "to-ico": "^1.1.5"
   },
   "browserslist": [
     "last 2 versions"
