--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "rm -rf .cache && parcel src/index.pug",
-    "build": "rm -rf dist && parcel build src/index.pug --public-url / && inline-source --root ./dist dist/index.html dist/index.html && cp -r static/* dist/."
+    "start": "rm -rf .cache && parcel src/pages.pug",
+    "build": "rm -rf dist && parcel build src/pages.pug --public-url / && inline-source --root ./dist dist/index.html dist/index.html && inline-source --root ./dist dist/404.html dist/404.html && cp -r static/* dist/."
   },
   "dependencies": {
     "browsernizr": "^2.2.0",
