--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "rm -rf .cache && parcel src/pages.pug",
-    "build": "rm -rf dist && parcel build src/pages.pug --public-url / && inline-source --root ./dist dist/index.html dist/index.html && inline-source --root ./dist dist/404.html dist/404.html && cp -r static/* dist/."
+    "build": "rm -rf .cache && rm -rf dist && parcel build src/pages.pug --public-url / && inline-source --root ./dist dist/index.html dist/index.html && inline-source --root ./dist dist/404.html dist/404.html && cp -r static/* dist/."
   },
   "dependencies": {
     "browsernizr": "^2.2.0",
