--- a/package.json
+++ b/package.json
@@ -3,19 +3,31 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "rm -rf .cache && parcel src/pages.pug",
-    "build": "rm -rf .cache && rm -rf dist && parcel build src/pages.pug --public-url / && inline-source --root ./dist dist/index.html dist/index.html && inline-source --root ./dist dist/404.html dist/404.html && cp -r static/* dist/."
+    "start": "webpack-dev-server --mode development",
+    "build": "rm -rf dist && NODE_ENV=production webpack --mode production"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "babel-loader": "^8.0.0-beta.2",
     "browsernizr": "2.2.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.10",
     "debounce": "1.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-inline-source-webpack-plugin": "https://github.com/hesselbom/html-inline-source-webpack-plugin.git",
+    "html-loader": "^0.5.5",
     "inline-source-cli": "1.2.0",
-    "node-sass": "4.7.2",
-    "parcel-bundler": "1.6.2",
-    "parcel-plugin-pug": "https://github.com/hesselbom/parcel-plugin-pug.git#test",
-    "parcel-plugin-sw-precache": "https://github.com/hesselbom/parcel-plugin-sw-precache.git#feature/navigateFallback",
+    "node-sass": "^4.7.2",
+    "pug-html-loader": "^1.1.5",
+    "sass-loader": "^6.0.7",
     "smoothscroll": "0.4.0",
-    "to-ico": "1.1.5"
+    "style-loader": "^0.20.3",
+    "to-ico": "1.1.5",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1"
   },
   "browserslist": [
     "last 2 versions"
