Update package.pkg + Various fixes

--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "build": "rm -rf dist && NODE_ENV=production webpack --mode production"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "babel-loader": "^8.0.0-beta.2",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.2",
     "browsernizr": "2.2.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.10",
-    "debounce": "1.1.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "debounce": "1.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "inline-source-cli": "1.2.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.3",
     "pug-html-loader": "^1.1.5",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.1.0",
     "smoothscroll": "0.4.0",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.23.0",
     "to-ico": "1.1.5",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
