--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
+    "in-view": "^0.6.1",
     "inline-source-cli": "1.2.0",
     "node-sass": "^4.9.3",
     "pug-html-loader": "^1.1.5",
