Add '--prerender' option on build

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build --template src/template.html",
-    "serve": "preact build --template src/template.html && preact serve",
+    "build": "preact build --prerender --template src/template.html",
+    "serve": "preact build --prerender --template src/template.html && preact serve",
     "dev": "preact watch",
     "lint": "eslint src"
   },
