Add 'Antistress' showcase

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "babel-eslint": "^10.0.1",
     "classnames": "^2.2.6",
     "copy-webpack-plugin": "^4.6.0",
-    "eslint": "^4.19.1",
-    "eslint-config-synacor": "^1.1.0",
-    "if-env": "^1.0.0",
+    "eslint": "^5.15.1",
+    "eslint-config-synacor": "^3.0.3",
+    "if-env": "^1.0.4",
     "node-sass": "^4.11.0",
     "preact-cli": "^2.2.1",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "sine-waves": "^0.3.0"
   },
   "dependencies": {
     "preact": "^8.4.2",
