--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build --prerender --template src/template.html",
+    "build": "preact build --prerender --template src/template.html --no-service-worker",
     "postbuild": "node postbuild.js",
     "prebuild": "node prebuild.js",
     "serve": "preact build --prerender --template src/template.html && preact serve",
@@ -27,14 +27,14 @@
     "if-env": "^1.0.4",
     "node-sass": "^4.12.0",
     "preact-cli": "^2.2.1",
-    "preact-cli-workbox-plugin": "^1.1.1",
     "sass-loader": "^7.3.1",
     "sine-waves": "^0.3.0"
   },
   "dependencies": {
     "in-view": "git+https://github.com/losthumans/in-view.git",
     "preact": "^8.5.2",
-    "preact-compat": "^3.19.0"
+    "preact-compat": "^3.19.0",
+    "webpack-remove-serviceworker-plugin": "^1.0.0"
   },
   "standard": {
     "parser": "babel-eslint",
