--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-synacor": "^3.0.5",
     "fs-extra": "^8.1.0",
     "if-env": "^1.0.4",
+    "memoize-one": "^5.1.1",
     "merge": "^1.2.1",
     "node-sass": "^4.12.0",
     "preact-cli": "^2.2.1",
