--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "merge": "^1.2.1",
     "node-sass": "^4.12.0",
     "preact-cli": "^2.2.1",
+    "preact-markup": "^1.6.0",
     "sass-loader": "^7.3.1",
     "sine-waves": "^0.3.0"
   },
