--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "node prebuild.js",
     "serve": "preact build --prerender --template src/template.html && preact serve",
     "dev": "preact watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
@@ -25,6 +26,7 @@
     "eslint-config-synacor": "^3.0.5",
     "fs-extra": "^8.1.0",
     "if-env": "^1.0.4",
+    "jest": "^21.2.1",
     "memoize-one": "^5.1.1",
     "merge": "^1.2.1",
     "node-sass": "^4.12.0",
