--- a/package.json
+++ b/package.json
@@ -37,17 +37,17 @@
     "jest": "^21.2.1",
     "memoize-one": "^5.1.1",
     "merge": "^1.2.1",
-    "node-sass": "^4.14.1",
     "pre-commit": "^1.2.2",
     "preact-cli": "^2.2.1",
     "preact-markup": "^1.6.0",
+    "sass": "^1.49.7",
     "sass-loader": "^7.3.1",
     "sine-waves": "^0.3.0",
     "standard": "^14.3.4"
   },
   "dependencies": {
     "codemirror": "^5.59.2",
-    "in-view": "git+https://github.com/losthumans/in-view.git",
+    "in-view": "git+https://github.com/futurememories/in-view.git",
     "marked": "^1.1.1",
     "preact": "^8.5.2",
     "preact-compat": "^3.19.0",
